Apply automated SequencedCollection refactorings