@@ -8,7 +8,8 @@ import org.janelia.alignment.json.JsonUtils;
 import org.junit.jupiter.api.Test;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 
 /**
  * Tests the {@link TileCoordinates} class.
@@ -39,15 +40,12 @@ public class TileCoordinatesTest {
 
         for (int i = 0; i < parsedListOfLists.size(); i++) {
             final List<TileCoordinates> parsedList = parsedListOfLists.get(i);
-            assertTrue(parsedList.size() > 0, "parsed list " + i + " is empty");
-            final Object parsedObject = parsedList.get(0);
-            //noinspection ConstantConditions
-            assertTrue(parsedObject instanceof TileCoordinates,
-                       "parsed list " + i + " has item with type " + parsedObject.getClass());
-
+            assertFalse(parsedList.isEmpty(), "parsed list " + i + " is empty");
+            final Object parsedObject = parsedList.getFirst();
+            assertInstanceOf(TileCoordinates.class, parsedObject, "invalid item type in parsed list " + i);
         }
 
-        final List<TileCoordinates> list = listOfLists.get(0);
+        final List<TileCoordinates> list = listOfLists.getFirst();
 
         json = JsonUtils.MAPPER.writeValueAsString(list);
 
@@ -55,11 +53,8 @@ public class TileCoordinatesTest {
         assertEquals(list.size(), parsedList.size(), "invalid number of coordinates parsed");
 
         for (int i = 0; i < parsedList.size(); i++) {
-            final Object parsedObject = parsedList.get(0);
-            //noinspection ConstantConditions
-            assertTrue(parsedObject instanceof TileCoordinates,
-                       "parsed list " + i + " has item with type " + parsedObject.getClass());
-
+            final Object parsedObject = parsedList.get(i);
+            assertInstanceOf(TileCoordinates.class, parsedObject, "invalid type for parsed item " + i);
         }
 
     }
