@@ -175,7 +175,7 @@ public class RenderDataServiceTest {
 
         assertNotNull(lastTileTransformList, "null list returned");
         assertEquals(1, lastTileTransformList.size(), "invalid number of tiles");
-        final LastTileTransform firstEntry = lastTileTransformList.get(0);
+        final LastTileTransform firstEntry = lastTileTransformList.getFirst();
         assertEquals("140331142443008104", firstEntry.getTileId(), "invalid tileId for first entry");
         assertEquals(LeafTransformSpec.class, firstEntry.getLastTransform().getClass(),
                      "invalid last transform class");
